--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Lab_07_JDBC" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Lab_07_JDBC.</description>
+<project name="Lab_09_JPA" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Lab_09_JPA.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
